@@ -159,3 +159,17 @@ kern_return_t get_threads(thread_act_port_array_t *threads){
 
     return err;
 }
+
+int suspended(void){
+    struct task_basic_info_64 info = {0};
+    mach_msg_type_number_t count = TASK_BASIC_INFO_64_COUNT;
+
+    kern_return_t err = task_info(debuggee->task,
+            TASK_BASIC_INFO_64,
+            (task_info_t)&info,
+            &count);
+
+    printf("%s: %s suspend count %d\n", __func__, mach_error_string(err),
+            info.suspend_count);
+    return info.suspend_count == 1;
+}
